--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/sreehariv-code" target="_blank">Sreehari P V</a>.
     </p>
   </div>
 </body>
